[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hightop"
version = "0.2.0"
description = "A nice shortcut for group count queries with Django"
readme = "README.md"
authors = [
    {name = "Andrew Kane", email = "andrew@ankane.org"}
]
license = "MIT"
requires-python = ">= 3.8"
dependencies = [
    "Django"
]

[project.urls]
Homepage = "https://github.com/ankane/hightop.py"

[dependency-groups]
dev = [
    "Django",
    "mysqlclient",
    "psycopg[binary]",
    "pytest"
]
